--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,19 +4,41 @@ name: lab-testing
 
 on:
   push:
-    jobs:
-      unit-tests:
-        runs-on: ubuntu-latest
-        steps:
-          - uses: actions/checkout@v4
-          - uses: actions/setup-python@v4
-            with:
-              python-version: '3.11.6'
-          - name: Run image
-            uses: abatilo/actions-poetry@v2
-            with:
-              poetry-version: '1.7.1'
-          - name: Install dependencies
-            run: poetry install; poetry add pytest; poetry add pytest-mock;
-          - name: Run pytest
-            run: poetry run pytest tests/unit/test_*.py
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+
+
+jobs:
+  unit-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.6'
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: '1.7.1'
+      - name: Install dependencies
+        run: poetry install; poetry add pytest; poetry add pytest-mock;
+      - name: Run pytest
+        run: poetry run pytest tests/unit/test_*.py
+  e2e-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11.6'
+      - name: Run image
+        uses: abatilo/actions-poetry@v2
+        with:
+          poetry-version: '1.7.1'
+      - name: Install dependencies
+        run: poetry install; poetry add pytest; poetry add pytest-mock;
+      - name: Run pytest
+        run: poetry run pytest tests/e2e/test_*.py
