--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,13 +6,10 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
 
 jobs:
   unit-tests:
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -29,6 +26,7 @@ jobs:
         run: poetry run pytest tests/unit/test_*.py
   e2e-tests:
     runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v4
